add remove route for a film
